# mysql-mcp-only-read

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  docker-compose.yml  install.bat  install.py  mcp.json  pyproject.toml  requirements.txt  server.py
