[project]
name = "mysql-mcp-server"
version = "0.2.0"
description = "A readonly MySQL MCP Server supporting stdio and HTTP/SSE transports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "PyMySQL>=1.1.2",
]

[project.scripts]
mysql-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
